--- a/index.html
+++ b/index.html
@@ -22,53 +22,59 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">Navbar</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#screen2">Screen 2</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#screen3">Screen 3</a>
-      </li>
-    </ul>
-  </div>
-  </nav>
-  <div class="content" id="home">
-    Home page
-  </div>
-  <div class="content" id="screen2">
-    This is screen 2
-  </div>
-  <div class="content" id="screen3">
-    This is screen 3
-  </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#screen2">Create</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#screen3">Detail</a>
+        </li>
+        </ul>
+    </div>
+    </nav>
+    <div class="content" id="home">
+        Home page
+    </div>
+    <div class="content" id="screen2">
+        This is screen 2
+    </div>
+    <div class="content" id="screen3">
+        This is screen 3
+    </div>
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
       
 
     <script>
-      $(document).ready(function() {
+        $(document).ready(function() {
 
-        function hideScreens() {
-          $(".content").hide();
-        }
+            function hideScreens() {
+            $(".content").hide();
+            }
 
-        $(".nav-link").on("click", function(){
-          hideScreens();
-          var target = $(this).attr("href");
-          $(target).show();
+            $(".nav-link").on("click", function(){
+            hideScreens();
+            var target = $(this).attr("href");
+            $(target).show();
+            });
         });
-
-      });
     </script>
 
-
+    <script>
+        // register the service worker for offline use
+        if('serviceWorker' in navigator) {
+          navigator.serviceWorker
+                   .register('./sw.js')
+                   .then(function() { console.log("Service Worker Registered"); });
+        }
+    </script>
   </body>
 </html>
