added missing manifest link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Notes App</title>
+    <title>Notes App</title>
+    <link rel='manifest' href='./manifest.json'>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	 crossorigin="anonymous">
 
@@ -66,9 +67,7 @@
             $(target).show();
             });
         });
-    </script>
 
-    <script>
         // register the service worker for offline use
         if('serviceWorker' in navigator) {
           navigator.serviceWorker
