--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     </nav>
     <div class="content" id="home">
-        <ul id="note-list">
+        <ul id="note-list" class="list-group">
         </ul>
     </div>
     <div class="content" id="create">
@@ -86,6 +86,8 @@
             notes: 'id++, note, description'
         });
 
+        refreshNotesList();
+
         $('#create-note').on('click', function() {
             var noteElem = $('#note');
             var descriptionElem = $('#note-details');
@@ -100,8 +102,27 @@
             if(noteVal && descriptionVal)
             {
                 db.notes.put({note: noteVal, description: descriptionVal});
+
+                refreshNotesList();
             }
         });
+
+        async function refreshNotesList()
+        {
+            var notesList = $('#note-list');
+
+            notesList.empty();
+
+            await db.notes.each(function(elem){
+                var newNote = $('<li>');
+                newNote.addClass('list-group-item');
+                newNote.text(elem.note);
+
+                notesList.append(newNote);
+            });
+
+            $('a[href="#home"').trigger('click');
+        }
     </script>
   </body>
 </html>
