--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button id="create-note" class="btn btn-primary btn-lg btn-block">Create</button>
     </div>
     <div class="content" id="detail">
-        This is screen 3
+        No note selected
     </div>
 
 
@@ -122,6 +122,9 @@
                 newNote.on('click', function(){
                     $('.content').hide();
                     var target = $(this).attr("href");
+
+                    showDetails(elem.note);
+
                     $(target).show();
                 });
 
@@ -129,6 +132,13 @@
             });
 
             $('a[href="#home"').trigger('click');
+        }
+
+        async function showDetails(noteVal)
+        {
+            var details = await db.notes.where('note').equals(noteVal).each(function(elem) {
+                $('#detail').text(elem.description);
+            });
         }
     </script>
   </body>
