--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button id="create-note" class="btn btn-primary btn-lg btn-block">Create</button>
     </div>
     <div class="content" id="detail">
-        No note selected
+        <p id="detail-text">No note selected</p>
     </div>
 
 
@@ -137,7 +137,7 @@
         async function showDetails(noteVal)
         {
             var details = await db.notes.where('note').equals(noteVal).each(function(elem) {
-                $('#detail').text(elem.description);
+                $('#detail-text').text(elem.description);
             });
         }
     </script>
